# send-sds

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  INSTALL  LICENSE  Makefile  Makefile.in  NEWS  README  README.md  TODO  common.c  common.h  config.status  configure  configure.ac  err.c  err.h  layered_finger_snap_mono.sds  main.c  meta.h  midi.c  midi.h  midisds  midisds.c  midisds_common.c  midisds_common.h  midisds_dump.c  midisds_receive.c  midisds_receive.h  midisds_send.c  midisds_send.h  receive-sds.c  sds.c  sds.h  send-sds.c  test-err.c  test-midi.c
autom4te.cache/: output.0  traces.0  traces.1
doc/: Sample Dump Standard.html
etc/: README
etc/midisd/: midisds.conf
lib/: README
src/: Makefile  Makefile.am  Makefile.in  midisd.h  midisd_cli.c  midisd_cli.h  midisd_command.c  midisd_command.h  midisd_common.c  midisd_common.h  midisd_conf.c  midisd_conf.h  midisd_convert.c  midisd_convert.h  midisd_dump.c  midisd_dump.h  midisd_log.c  midisd_log.h  midisd_main.c  midisd_rawmidi.c  midisd_rawmidi.h  midisd_receive.c  midisd_receive.h  midisd_send.c  midisd_send.h  midisd_sndfile.c  midisd_sndfile.h  midisds.h  midisds_cli.c  midisds_cli.h  midisds_command.c  midisds_command.h  midisds_common.c  midisds_common.h  midisds_conf.c  midisds_conf.h  midisds_convert.c  midisds_convert.h  midisds_dump.c  midisds_dump.h  (+13 more)
src/.deps/: midisd_cli.Po  midisd_command.Po  midisd_common.Po  midisd_conf.Po  midisd_convert.Po  midisd_dump.Po  midisd_log.Po  midisd_main.Po  midisd_rawmidi.Po  midisd_receive.Po  midisd_send.Po  midisd_sndfile.Po
